--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -34,6 +34,7 @@ From {{com|en|hair|net}}. Compare {{cog|nl|haarnetje}}, {{cog|de|Haarnetz}}, {{c
 * Irish: {{t|ga|eangach ghruaige|f}}, {{t|ga|líontán gruaige|m}}
 * Italian: {{t+|it|retina}}
 * Japanese: {{t+|ja|コール|tr=kōru|sc=Jpan}}, {{t|ja|ヘアネット|tr=heanetto|sc=Jpan}}
+* Latin: {{t|la|rēticulum|n}}
 * Old English: {{t|ang|feaxnett|n}}
 * Portuguese: [[rede]] para os [[cabelos]] {{g|f}}
 * Russian: {{t+|ru|се́тка|f}} {{qualifier|для воло́с}}
