--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -10,7 +10,7 @@
 # A person skilled in [[metallurgy]].
 
 ====Translations====
-{{trans-top|person skilled in metallurgy}}
+{{trans-top|person skilled in separating metals from their ores and compound alloy using science and technology}}
 * Armenian: {{t+|hy|մետաղագործ}}
 * Belarusian: {{t|be|металу́рг|m}}
 * Bulgarian: {{t|bg|металу́рг|m}}
