--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -42,6 +42,9 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 # [[language]] {{gloss|system of communication using words or symbols}}
 #: {{uxi|id|'''bahasa''' [[Indonesia]]|Indonesian (language)}}
 
+====Alternative forms====
+* {{alter|id|basa}} {{q|nonstandard}}
+
 ====Derived terms====
 {{der4|id|
 | berbahasa
