--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -25,8 +25,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{rfdatek|en|Edmund Spenser}}
 #*: The fifth had charge sick persons to '''attend'''.
 #*{{RQ:Shakespeare Verona|I|iii|passage=youthful Valentine<br>'''Attends''' the emperor in his royal court.}}
-#* {{rfdatek|en|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}}
-#*: With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.
+#* {{RQ:Macaulay History|13|With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.}}
 # {{senseid|en|to be present at}}{{lb|en|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings; to regularly go to (an event or place). {{defdate|from 17th c.}}
 #: {{ux|en|Children must '''attend''' primary school.}}
 #* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}| title={{w|The Celebrity}}| chapter=5| passage=In the eyes of Mr. Farquhar Fenelon Cooke the apotheosis of the Celebrity was complete. The people of Asquith were not only willing to '''attend''' the house-warming, but had been worked up to the pitch of eagerness. The Celebrity as a matter of course was master of ceremonies.}}
