--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -15,6 +15,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 {{en-noun}}
 
 # {{taxlink|Brassica oleracea var. botrytis|variety|noshow=1}}, an annual variety of [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
+#* {{quote-book|en|page=326|author=A Lady [Hannah Glasse]|year=1767|title=The Art of Cookery Made Plain and Eaſy{{...}}|url= https://books.google.co.nz/books?id=pd5QAQAAIAAJ |passage=ASPARAGUS, '''cauliflowers''', imperial Sileſia, royal and cabbage lettuces, burnet, purſlain, cucumbers, naſturtian flowers, peaſe and beans ſown in October, artichokes, ſcarlet ſtrawberries, and kidney beans. }}
 # The edible head or [[curd]] of a cauliflower plant.
 # The [[swelling]] of a [[cauliflower ear]].
 #* '''2018''', John Harding, ''The Whitechapel Whirlwind: The Jack Kid Berg Story''
