--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -120,7 +120,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * German: {{t+|de|Blase|f}}
 * Greek: {{t+|el|φυσαλίδα|f|sc=Grek}}
 *: Ancient: {{t|grc|πομφόλυξ|f}}
-* Gujarati: {{t|gu|છેતરપિંડી|f}}, {{t|gu|બબલ|f}}
+* Gujarati: {{t|gu|બબલ|f}}
 * Hausa: {{t|ha|kumfa}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Hindi: {{t+|hi|बुलबुला|m}}, {{t+|hi|बुल्ला|m}}, {{t+|hi|बुदबुदा|m}}, {{t+|hi|फफोला|m}},
