--- a/en/s/SELSIS.801970.wikitext
+++ b/en/s/SELSIS.801970.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Proper noun===
-{{head|en|proper noun}}
+{{en-proper noun}}
 
 # {{acronym of|en|[[space|Space]] [[environment|Environment]] [[laboratory|Laboratory]] [[solar|Solar]] [[imaging|Imaging]] [[system|System]]}}
 
