--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -43,8 +43,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 #: ''He '''bent''' the company's resources to gaining market share.''
 #* {{rfdatek|en|Temple}}
 #*: to '''bend''' his mind to any public business
-#* {{rfdatek|en|Alexander Pope}}
-#*: when to mischief mortals '''bend''' their will
+#* {{RQ:Pope Rape|year=1717|canto=III|passage=when to mischief mortals '''bend''' their will}}
 # {{lb|en|intransitive}} To apply oneself to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' to the goal of gaining market share.''
 # {{lb|en|transitive}} To adapt or interpret to for a purpose or beneficiary.<!--accomplishment-->
