--- a/en/u/unhealthiness.742234.wikitext
+++ b/en/u/unhealthiness.742234.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{suffix|en|unhealthy|ness}}
+From {{af|en|unhealthy|-ness}}.
 
 ===Noun===
 {{en-noun|-|es}}
@@ -11,3 +11,8 @@
 #*: {{...}} I possess an old house, Ferndean Manor, even more retired and hidden than this, where I could have lodged her safely enough, had not a scruple about the '''unhealthiness''' of the situation, in the heart of a wood, made my conscience recoil from the arrangement.
 #* '''1988''', {{w|Edmund White}}, ''{{w|The Beautiful Room is Empty}}'', New York: Vintage International, 1994, Chapter Five,
 #*: He looked elegant and vulnerable, his eyes edging away from contact and set into a face of exquisite '''unhealthiness'''.
+
+====Translations====
+{{trans-top|the state of being unhealthy}}
+{{trans-mid}}
+{{trans-bottom}}
