--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -41,7 +41,7 @@
 * Scots: {{t|sco|Wast Frisie}}
 * Spanish: {{t+|es|frisón|m}}, {{t+|es|frisio|m}}
 * Swedish: {{t+|sv|västfrisiska|c}}
-* West Frisian: {{t+|fy|Frysk}}, {{t|fy|Westerlauwersk Frysk}}
+* West Frisian: {{t+|fy|Frysk}}, {{t|fy|Westerlauwersk Frysk}}, {{t|fy|West-Frysk}}
 {{trans-bottom}}
 
 {{trans-top|the Western Frisian dialect of Dutch}}
