--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -13,7 +13,7 @@
 {{head|en|numeral}}
 
 # {{lb|en|US|modern|_|British|_|&|_|Australian|[[w:Long and short scales|short scale]]}} A [[thousand]] [[trillion]] [[trillion]], a [[billion]] [[billion]] [[billion]]: 1 followed by 27 zeros, 10<sup>27</sup>.
-# {{lb|en|dated|_|British|_|&|_|Australian|[[w:Long and short scales|long scale]]}} A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
+# {{lb|en|dated|_|British|_|&|_|Australian|[[w:Long and short scales|long scale]]}} A [[trillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 ====Synonyms====
 * {{sense|10<sup>48</sup>}} a [[w:Long and short scales|short scale]] [[quindecillion]]
@@ -36,7 +36,7 @@
 * Ukrainian: {{t+|uk|октильйон}}
 {{trans-bottom}}
 
-{{trans-top-also|a quadrillion quintillion, 10<sup>48</sup>|quindecillion|id=10^48}}
+{{trans-top-also|a trillion quintillion, 10<sup>48</sup>|quindecillion|id=10^48}}
 * Chinese:
 *: Mandarin: {{t|cmn|一極}}
 * Esperanto: {{t|eo|okiliono}}
