--- a/en/c/communicable scale.746529.wikitext
+++ b/en/c/communicable scale.746529.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{examples-right|sense=tool for numerical data|“Joseph has traveled 50% of his 26-hour journey between Florida and Maine.” [not] “Joseph is in the middle of his trip”}}
+{{examples|sense=tool for numerical data|“Joseph has traveled 50% of his 26-hour journey between Florida and Maine.” [not] “Joseph is in the middle of his trip”}}
 {{en-noun}}
 
 # A [[model]] of [[designation]] for [[comparing]] an activity through [[oral]] [[descriptions]].
