--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -155,6 +155,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 
 # {{lb|en|tincture}}: In [[blazon]], of the colour hermine (white with black spots).
 
+====Translations====
 {{trans-top|of white colour with black spots on a coat of arms}}
 * Danish: {{t|da|hermelin}}
 {{trans-mid}}
