--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -266,6 +266,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Portuguese: {{t+|pt|peso|m}}
 * Romanian: {{t+|ro|greutate|f}}
 * Russian: {{t+|ru|вес|m}}
+* Spanish: {{t+|es|peso|m}}
 {{trans-bottom}}
 
 {{trans-top|weight for training muscles}}
@@ -305,6 +306,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Portuguese: {{t+|pt|peso|m}}
 * Russian: {{t+|ru|вес|m}}
 * Scots: {{t|sco|weicht}}
+* Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|vikt|c}}
 {{trans-bottom}}
 
