--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -32,7 +32,7 @@ The word is sometimes considered to come from an {{cog|xno|-}} derivative of {{c
 * Belarusian: {{t|be|соня-палчок}}
 * Breton: {{t|br|hunegan gris}}
 * Bulgarian: {{t+|bg|сънливец}}
-* Catalan: {{t|ca|liró}}
+* Catalan: {{t|ca|liró}}, {{t|ca|rata dormidora|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|睡鼠|tr=shuìshǔ|sc=Hani}}
 * Czech: {{t+|cs|plch}}
