--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -490,7 +490,7 @@ From {{inh|en|enm|blo}}, {{m|enm|bloo}}, from {{inh|en|ang|blāw||blue}}, from {
 ====Adjective====
 {{en-adj|er|more}}
 
-# {{lb|en|now|chiefly|dialectal|Northern England}} [[blue|Blue]].
+# {{senseid|en|blue}} {{lb|en|now|chiefly|dialectal|Northern England}} [[blue|Blue]].
 
 ===Etymology 3===
 From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blēwe}}, from {{inh|en|gem-pro|*blewwaną|t=to beat}} (compare {{cog|non|blegði|t=wedge}}, {{cog|de|bläuen}}, {{cog|dum|blouwen}}). Related to [[block]].
