--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -72,7 +72,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Georgian: {{t|ka|თრითინა}}, {{t|ka|სინდიოფალა}}, {{t|ka|დედოფალა}}, {{t|ka|დედოფალა}}
 * German: {{t+|de|Wiesel|n}}, {{t|de|Mauswiesel|n}}, {{t|de|Zwergwiesel|n}}, {{t|de|Kleinwiesel|n}}, {{qualifier|popularly}} {{t|de|Hermännchen|n}}
 * Greek: {{t+|el|νυφίτσα|f}}
-*: Ancient: {{t|grc|γαλῆ|f}}
+*: Ancient: {{t|grc|γαλέα|f}}, {{t|grc|γαλῆ|f}}
 * Hebrew: {{t+|he|סמור|tr=samur}}
 * Hindi: {{t|hi|रासू|m}}
 * Hungarian: {{t+|hu|menyét}}
