--- a/en/i/irregular galaxy.802551.wikitext
+++ b/en/i/irregular galaxy.802551.wikitext
@@ -22,13 +22,13 @@
 {{trans-top|galaxy which has no spiral and is not elliptical}}
 * Arabic: {{t|ar|مَجَرَة غَيْر مُنْتَظِمَة|f|tr=majara ḡayr muntaẓima}}
 *: Egyptian Arabic: {{t|arz|مجرة غير منتظمة|f|tr=magara ğayr muntaẓima|sc=Arab}}
-{{trans-mid}}
 * Chinese:
-*: Mandarin: {{t|cmn|不规则星系|tr=bùguīzé xīngxì}}
+*: Mandarin: {{t+|cmn|不規則星系|sc=Hani}}, {{t+|cmn|不规则星系|tr=bùguīzé xīngxì|sc=Hani}}
 * Dutch: {{t|nl|onregelmatig sterrenstelsel}}
 * Esperanto: {{t|eo|malregula galaksio}}
 * Finnish: {{t|fi|[[epäsäännöllinen]] [[galaksi]]}}
 * French: {{t|fr|galaxie irrégulière|f}}
+{{trans-mid}}
 * German: {{t|de|Irreguläre Galaxie}}
 * Indonesian: {{t|id|galaksi tak beraturan}}
 * Italian: {{t|it|galassia irregolare|f}}
