--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -128,9 +128,9 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 
 ====Readings====
 {{ja-readings
-|goon=がち<ぐわち, ごち
-|kanon=げつ<げつ<ぐゑつ
-|kanyoon=がつ<ぐわつ
+|goon=がち<ぐゎち, ごち
+|kanon=げつ<ぐゑつ
+|kanyoon=がつ<ぐゎつ
 |kun=つき-
 |nanori=おと, す, もり, がっ, ずき
 }}
