--- a/en/a/applicative.745849.wikitext
+++ b/en/a/applicative.745849.wikitext
@@ -8,6 +8,7 @@ From {{m|en|applicate}}.
 
 # Having practical [[application]]; [[applicable]].
 # {{lb|en|computing}} Of a [[programming language]]: using [[successive]] [[functional]] [[transformation]]s on [[data]] to arrive at a [[result]].
+# {{lb|en|programming}} {{rfdef|en}}
 
 ====Translations====
 {{trans-top|having practical application}}
