--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -79,11 +79,11 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
 * Japanese: {{t+|ja|イタチ|tr=itachi|sc=Jpan}}, {{t+|ja|鼬|tr=いたち, itachi|sc=Jpan}}, {{t|ja|鼬鼠|tr=いたち, itachi|sc=Jpan}}, {{t|ja|飯綱|tr=いいずな, īzuna}}
-{{trans-mid}}
 * Korean: {{t|ko|족제비}}
 * Latgalian: {{t|ltg|luoseica}}
 * Latin: {{t|la|mūstēla|f}}
 * Latvian: {{t|lv|zebiekste|f}}
+{{trans-mid}}
 * Lithuanian: {{t|lt|žebenkštis|m}}
 * Low German: {{t|nds|Wesel|n}}
 * Luxembourgish: {{t|lb|Wisel|n}}
@@ -110,6 +110,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Swedish: {{t+|sv|vessla}}
 * Tagalog: {{t|tl|mustela}}
 * Thai: {{t|th|เพียงพอน}}
+* Tibetan: {{t|bo|ཟེ་མོ་སེར་པོ}}
 * Turkish: {{t+|tr|gelincik}}
 * Ukrainian: {{t|uk|ла́ска|f}}, {{t|uk|ла́сиця|f}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
