--- a/en/s/sakkos.741476.wikitext
+++ b/en/s/sakkos.741476.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|gkm|en}} {{m|grc|σάκκος}}.
+From {{etyl|gkm|en}} {{m|grc|σάκκος}}. {{doublet|en|sack}}.
 
 ===Noun===
 {{en-noun|es|sakkoi}}
