--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -75,6 +75,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |pulp mill
 |puppy mill
 |rice mill
+|Riding Mill
+|Ridings Mill
 |rolling mill
 |run-of-the-mill
 |[[rumor mill]], [[rumour mill]]
