--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Borrowed from {{bor|en|es|doncella||maid}}. Compare {{m|en|damsel}}.
+Borrowed from {{bor|en|es|doncella||maid}}. {{doublet|en|damsel}}.
 
 ===Noun===
 {{en-noun}}
