--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -73,6 +73,7 @@ Abbreviation of various terms and phrases.
 * Korean: {{t+|ko|시디}}
 * Macedonian: {{t|mk|це-де|n}}
 * Malay: {{t|ms|CD}}
+* Mòcheno: {{t|mhn|CD|f}}
 * Persian: {{t|fa|سی‌دی|tr=si-di|sc=fa-Arab}}
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди́|m}}
