--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -171,6 +171,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Manx: {{t|gv|mwyllin|f}}
 * Maori: {{t|mi|mira}}
 * Moksha: {{t|mdf|ведькев}}
+* Mòcheno: {{t|mhn|mil|f}}
 * Norwegian:
 *: Bokmål: {{t+|no|mølle|m|f}}
 *: Nynorsk: {{t|nn|mylne|f}}, {{t+|no|mølle|f}}
