--- a/en/p/pinyons.719938.wikitext
+++ b/en/p/pinyons.719938.wikitext
@@ -4,3 +4,12 @@
 {{head|en|noun form}}
 
 # {{plural of|en|pinyon}}
+
+----
+
+==Catalan==
+
+===Noun===
+{{head|ca|noun form}}
+
+# {{plural of|ca|pinyó}}
