--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -134,6 +134,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Asturian: {{t|ast|soplar}}
 * Azerbaijani: {{t|az|üfürmək}}, {{t+|az|əsmək}}
 * Belarusian: {{t|be|дзьмуць|impf}}, {{t|be|дуць|impf}}, {{t|be|ве́яць|impf}}
+* Bikol Central: {{t|bcl|hayop}}
 * Bulgarian: {{t+|bg|ду́хам|impf}}, {{t+|bg|ве́я|impf}}
 * Burmese: {{t+|my|မှုတ်}}
 * Catalan: {{t+|ca|bufar}}
