--- a/en/p/parting shot.775535.wikitext
+++ b/en/p/parting shot.775535.wikitext
@@ -18,7 +18,7 @@ Believed to be a variation of {{m|en|Parthian shot}}, referring to a military ma
 
 ====Translations====
 {{trans-top}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|loppulaukaus}}, {{t|fi|[[viimeinen]] [[sivallus]]}}
 {{trans-mid}}
 * French: {{t+|fr|flèche du Parthe|f}}
 {{trans-bottom}}
