--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -1,4 +1,9 @@
-{{also|Chin|chín|chỉn|-chin|chîⁿ}}
+''Disc may will help you with [[Goral House]]''
+
+
+
+'''No more names in Wikimedia.'''
+
 ==English==
 {{Wiktionary:Picture dictionary/en:head}}
 [[File:Ambroise Thomas 2.jpg|thumb|right|Composer Ambrose Thomas with hand on chin (1).]]
