--- a/en/f/frick.741824.wikitext
+++ b/en/f/frick.741824.wikitext
@@ -2,8 +2,8 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|en|/fɹɪk/}}
-* {{rhymes|en|ɪk}}
+* {{IPA|en|/frik/}}
+* {{rhymes|en|k}}
 
 ===Interjection===
 {{en-interj}}
