--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -93,7 +93,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 * Ewe: {{t-needed|ee}}
 * Extremaduran: {{t-needed|ext}}
 * Faroese: {{t|fo|einfaldur}}
-* Finnish: {{t+|fi|yksinkertainen}}; {{q|slang}} {{t+|fi|simppeli}}
+* Finnish: {{t+|fi|yksinkertainen}}; {{q|slang}} {{t+|fi|simppeli}}, {{t|fi|selko-}}
 * French: {{t+|fr|simple}}
 * Friulian: {{t-needed|fur}}
 * Galician: {{t|gl|simple}}, {{t|gl|sinxelo}}
