--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -304,7 +304,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-bottom}}
 
 {{trans-top|living being or creature}}
-* Finnish: {{t+|fi|olento}}
+* Finnish: {{t+|fi|olento}}, {{t+|fi|otus}}
 * Greek: {{t+|el|πλάσμα|n}}
 * Hungarian: {{t+|hu|teremtés}}, {{t+|hu|lény}}
 {{trans-mid}}
