--- a/en/c/crowdie.856323.wikitext
+++ b/en/c/crowdie.856323.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Alteration of Early Scots ''crud'' 'curd', cognate with Early Modern English and Middle English {{inh|en|enm|crud}}, ''crudde'' (14th c.), ''crodde'' of obscure origin.
+Alteration of {{der|en|sco-osc|crud|t=curd}}, cognate with Early Modern English and {{inh|en|enm|crud}}, ''crudde'' (14th c.), ''crodde'' of obscure origin.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈkɹaʊdi/}}
@@ -21,7 +21,7 @@ Alteration of Early Scots ''crud'' 'curd', cognate with Early Modern English and
 * {{l|sco|croodie}}, {{l|sco|croudie}}, {{l|sco|croudy}}, {{l|sco|crowdy}}
 
 ===Etymology===
-Evolution of Early Scots {{m|sco|crud}}, cognate with Middle English and Early Modern English {{m|enm|crud}} or {{m|enm|crudde|t=coagulated milk; curd; any coagulated or thickened substance; dregs}}, without undergoing the [[metathesis]] of Modern English ''[[curd]]''. Derives from {{der|sco|ang|crūdan|t=to press}}, itself from the earlier {{inh|sco|gem-pro|*krūdaną}}, {{m|gem-pro|*kreudaną}}, and ultimately from {{der|gem-pro|ine-pro|*grewt-|t=to push; press}}.
+Evolution of {{der|sco|sco-osc|crud}}, cognate with Early Modern English and {{cog|enm|crud}} or {{m|enm|crudde|t=coagulated milk; curd; any coagulated or thickened substance; dregs}}, without undergoing the [[metathesis]] of Modern English ''[[curd]]''. Derives from {{der|sco|ang|crūdan|t=to press}}, itself from the earlier {{inh|sco|gem-pro|*krūdaną}}, {{m|gem-pro|*kreudaną}}, and ultimately from {{der|gem-pro|ine-pro|*grewt-|t=to push; press}}.
 
 ===Pronunciation===
 {{IPA|sco|/krʌudi/}}
