--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -42,7 +42,7 @@ Various alternative etymologies have also been proposed:
 * {{zh-ref|Unger (1992)}} proposes cognation with {{cog|bo|ངོ||waxing and waning moon; half moon}} (as in {{m|bo|མར་ངོ||waning moon}} and {{m|bo|ཡར་ངོ||waxing moon}}), which {{zh-ref|Schuessler (2007)}} connects to {{cog|sit-pro|*s-ŋow||white; light colour}}. However, {{zh-ref|Sagart (1999)}} points out that the Tibetan word may be analyzed as a derivative of {{cog|bo|ངོ||face}}, which would mean the semantic connection between “moon” and “face” had to occur either independently in Chinese and Tibetan or in Proto-Sino-Tibetan; it also requires positing a suffix {{m|und|-t}} in Chinese.
 * {{zh-ref|Pulleybank (1995a)}} proposes another etymology based on the glyph for {{zh-l|*名}} (reconstructed as {{m|und|*màŋʲ}}), which he analyses as a phono-semantic compound of phonetic {{zh-l|*夕|moon}} and semantic {{zh-l|*口|mouth}}. He suggests that the phonetic component represents a lost word {{m|und|*màŋʲ||moon}}, and reconstructs {{lang|zh|月}} as {{m|und|*mŋʲ}} (consonantal frame of “moon”) + {{m|und|*-at}} (suffix) > {{m|und|*ŋʲʷat}}. However, there are more straightforward ways of explaining the glyph origin of {{zh-l|*名}} (see there), which would nullify the hypothesis of the lost word.
 * Related to {{zh-l|*越|to pass over; to cross over}} in some way.
-** {{zh-ref|Mei (1979)}} derives {{lang|zh|月}} from {{och-l|越|tr=**gjot > *gwjat}}: {{m|und|**N-gjot > *ngwjat}}. Also in this proposed word family is {{och-l|歲|tr=**s-gjots > *skwjadh|year}}. The semantics of this word family is centred around "to pass; to elapse".
+** {{zh-ref|Mei (1979)}} derives {{lang|zh|月}} from {{och-l|越|tr=**gjot > *gwjat}}: {{m|und|**N-gjot > *ngwjat}}. Also in this proposed word family is {{och-l|歲|tr=**s-gjots > *skwjadh|year}}. The semantics of this word family is centred around "to pass; to elapse". While {{zh-ref|Matisoff (1980)}} seems supportive of this word family, STEDT reconstructs {{cog|sit-pro|*grwat||to travel; to go through}} for {{zh-l|*越}} and {{zh-l|*歲}}.
 ** {{zh-ref|Ferlus (2012)}} reconstructs the {{cog|och|-}} as {{m|und|*ŋ.wat}} and puts it in a word family formed from a Chinese root {{m|und|*wat}}, having a meaning of "circularity" or "circular boundary". This proposed word family includes {{och-l|越|tr=*wat|to cross over}}, as in "to cross the enclosure of the village", and {{och-l|外|tr=*ŋ.wat-s|outside}}, as in "out of the enclosure of the village".
 
 ====Pronunciation====
