--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ang|en}} {{m|ang|Ēostre|}}, {{m|ang|Ēastre||a goddess of spring and fertility}} and {{m|ang|ēastre||Easter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*Austrǭ||Easter, springtime; a goddess of spring and fertility}}.
+From {{der|en|ang|Ēostre|}}, {{m|ang|Ēastre||a goddess of spring and fertility}} and {{m|ang|ēastre||Easter}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime; a goddess of spring and fertility}}.
 
 ===Proper noun===
 {{en-proper noun}}
