--- a/en/m/mouse wheel.741247.wikitext
+++ b/en/m/mouse wheel.741247.wikitext
@@ -13,6 +13,7 @@
 ====Translations====
 {{trans-top|disc used for scrolling}}
 * Czech: {{t|cs|skrolovací kolečko|n}}
+* Dutch: {{t+|nl|muiswieltje|n}}
 * Finnish: {{t|fi|hiiren rulla}}
 * French: {{t|fr|molette de souris|f}}
 {{trans-mid}}
