--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -10,7 +10,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * {{rhymes|en|ɛndəʊ}}
 
 ===Noun===
-{{en-noun|s|es}}
+{{en-noun}}
 
 # {{lb|en|video games}} A [[w:Nintendo Entertainment System|Nintendo Entertainment System]], or other video game system made by Nintendo.
 #: ''Wanna play on my '''Nintendo''' after school?''
