--- a/en/s/squirt gun.855129.wikitext
+++ b/en/s/squirt gun.855129.wikitext
@@ -23,6 +23,7 @@
 * Greek: {{t|el|νεροπίστολο}}
 * Hungarian: {{t+|hu|vízipisztoly}}
 * Italian: {{t|it|pistola ad acqua|f}}
+* Japanese: {{t|ja|水鉄砲|tr=mizudeppō}}
 * Korean: {{t+|ko|물총}}
 * Portuguese: {{t|pt|pistola d'água|f}}
 * Spanish: {{t|es|pistola de agua|f}}
