--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -12,7 +12,7 @@ From {{bor|en|fr|grognard||grumbler}}.
 # An [[old]] [[soldier]].
 # {{lb|en|historical}} A soldier of the original imperial guard that was created by [[w:Napoleon I|Napoleon I]] in 1804 and that made the final French charge at [[Waterloo]].
 # {{lb|en|games|slang}} Someone who [[enjoys]] playing older war-games or roleplaying games, or older versions of such games, when newer ones are available.
-#: ''James is such a '''grognard''', he only plays the original edition of Dungeons and Dragons.''
+#: ''Danny is such a '''grognard''', he only plays the original edition of Dungeons and Dragons.''
 #* {{seeCites|en}}
 
 ====Translations====
