--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -152,7 +152,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Georgian: {{t|ka|მერე}}, {{t|ka|კვლავ}}
 * German: {{t+|de|dann}}, {{t+|de|danach}}, {{t+|de|anschließend}}
 * Greek:
-*: Ancient: {{t|grc|ἔπειτε}}
+*: Ancient: {{t|grc|εἶτα}}, {{t|grc|ἔπειτε}}
 * Hebrew: {{t|he|אחר כך|tr=akhar-kakh}}
 * Hindi: {{t+|hi|फिर}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|azután}}, {{t+|hu|majd}}, {{t+|hu|utána}}
