--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -57,6 +57,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |grist for the mill
 |grist to the mill
 |Langley Mill
+|Littlemill
 |mill-bank
 |miller
 |Mill Hill
