--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{der|en|xno|esquirel}} and {{der|en|fro|escurel}} (whence {{cog|fr|écureuil}}), from {{der|en|VL.|*scūriolus}}, diminutive of {{m|la|*scūrius}}, variant of {{der|en|la|sciurus}}, from {{der|en|grc|σκίουρος}}. 
+From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{der|en|xno|esquirel}} and {{der|en|fro|escurel}} (whence {{cog|fr|écureuil}}), from {{der|en|VL.|*scūriolus}}, diminutive of {{m|la|*scūrius}}, variant of {{der|en|la|sciūrus}}, from {{der|en|grc|σκίουρος}}. 
 
 Displaced native {{noncog|enm|acquerne}}, {{m|enm|aquerne}}, from {{noncog|ang|ācweorna}}.
 
