--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -22,8 +22,6 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 
 # Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
 #: {{ux|en|The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.}}
-# A light [[pink]]ish-red [[colour]], like that of a pig (also called pig pink).
-#: {{color panel|FCD7DE}}
 # {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
 #* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
 #*: Weanlings grow into feeder '''pigs''', and feeder '''pigs''' grow into slaughter hogs. {{...}} Ultimately the end use for virtually all '''pigs''' and hogs is to be slaughtered for the production of pork and other products.
@@ -31,6 +29,10 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #: {{ux|en|Some religions prohibit their adherents from eating '''pig'''.}}
 #* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' {{ISBN|0741425319}}, [https://books.google.com.au/books?id=cdg7kQFFcYoC&pg=PA196&dq=%22Miss+Chastene,+could+you+fetch+me+out+an+extra+plate+of+pig%22&hl=en&sa=X&redir_esc=y#v=onepage&q=%22Miss%20Chastene%2C%20could%20you%20fetch%20me%20out%20an%20extra%20plate%20of%20pig%22&f=false page 196]:
 #*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
+# A light [[pink]]ish-red [[colour]], like that of a pig (also called pig pink).
+#: {{color panel|FCD7DE}}
+#* '''2019''', Bee Smith, ''Queen Bee's Party''
+#*: So far on the streets there's been a lot of metallic pink (the kind of pink as in the shade of '''pig''' you get, and this is exactly the shade of the diary I've been writing in) {{...}}
 # {{lb|en|derogatory|slang}} Someone who overeats or eats rapidly and noisily.
 #: {{ux|en|You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!}}
 # {{lb|en|derogatory|slang}} A [[lecherous]] or [[sexist]] man.
