--- a/en/r/real-life.741522.wikitext
+++ b/en/r/real-life.741522.wikitext
@@ -4,7 +4,7 @@
 ===Adjective===
 {{en-adj|head=[[real]]-[[life]]}}
 
-# As happens in [[real life]]; not [[fictional]], [[theoretical]] or [[assumed]].
+# As happens in [[real life]]; not [[fictional]] or [[theoretical]]; [[actual]] as opposed to [[believed]] or [[assumed]].
 #* {{quote-journal|en|date=2013-06-29|volume=407|issue=8842|page=55|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/international/21580191-edward-snowdens-odyssey-leaves-america-nonplussed-and-its-allies-dismayed-russia-china Travels and travails]
 |passage=Even without hovering drones, a lurking assassin, a thumping score and a denouement, the '''real-life''' story of Edward Snowden, a rogue spy on the run, could be straight out of the cinema. But, as with Hollywood, the subplots and exotic locations may distract from the real message: America’s discomfort and its foes’ glee.}}
