--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -27,6 +27,9 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 # A [[recommendation]] of a [[particular]] [[product]], [[service]] or [[person]].
 #: ''The good manners and intelligence of the students are an '''advertisement''' for the school.''
 # {{lb|en|obsolete}} [[notoriety|Notoriety]].
+# {{lb|en|card games}} In [[gin rummy]], the discarding of a card of one's preferred [[suit]] so as to mislead the opponent into thinking you do not want it.
+#* '''1947''', ''On Gin Rummy: An All-American Roundup'' (page 121)
+#*: The safest time to answer a possible '''advertisement''' is when you have no indication as to what suit your opponent wants. Then even if he has advertised, the odds are that your answer is not the card he is looking for.
 
 ====Synonyms====
 * {{sense|commercial solicitation}} {{l|en|ad}}, {{l|en|advert}}
