--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -18,7 +18,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|intransitive}} To produce an [[air]] [[current]].
 #* {{RQ:Shakespeare Lear|III|ii|296|1|''Lear''. '''Blow''' windes, & crack your cheeks; Rage, '''blow'''<br>You Cataracts, and Hyrricano's ſpout,}}
 #* {{RQ:Shakespeare Tempest|I|i|1|1|Tend to th' Maſters whiſtle: '''Blow''' till thou burſt thy winde, if roome enough.}}
-#* {{rfdatek|en|Walton}}
+#* '''1653''', {{w|Izaak Walton}}, ''The Compleat Angler''
 #*: Hark how it rains and '''blows'''!
 # {{lb|en|transitive}} To propel by an [[air]] [[current]].
 #: '''''Blow''' the dust off that book and open it up.''
@@ -63,7 +63,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #* {{RQ:Shakespeare Antony|V|ii|365|1|Shall they hoyſt me vp,<br>And ſhew me to the ſhowting [[varletry|Varlotarie]]<br>Of cenſuring Rome? Rather a ditch in Egypt,<br>Be gentle graue vnto me, rather on Nylus mudde<br>Lay me ſtarke-nak'd, and let the water-Flies<br>'''Blow''' me into abhorring;}}
 #* {{RQ:Shakespeare Tempest|III|i|11|1|''[[w:Ferdinand (The Tempest)|Fer.]]'' I am, in my condition<br>A Prince (''Miranda'') I do thinke a King<br>(I would not ſo) and would no more endure<br>This wodden ſlauerie, then to ſuffer<br>The [[flesh-fly|fleſh-flie]] '''blow''' my mouth: heare my ſoule ſpeake.}}
 # {{lb|en|obsolete}} To spread by report; to publish; to disclose.
-#* {{rfdatek|en|Dryden}}
+#* {{RQ:Dryden PAA}}
 #*: Through the court his courtesy was '''blown'''.
 #* {{rfdatek|en|Whiting}}
 #*: His language does his knowledge '''blow'''.
@@ -74,7 +74,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|transitive}} To put out of breath; to cause to blow from fatigue.
 #: ''to '''blow''' a horse''
 #: {{rfquotek|en|Sir Walter Scott}}
-# {{lb|en|obsolete}} To talk loudly; to boast; to storm.
+# {{lb|en|obsolete}} {{rfv-sense|To talk loudly; to boast; to storm}}.
 #* {{rfdatek|en|Bartlett}}
 #*: You '''blow''' behind my back, but dare not say anything to my face.
 # {{lb|en|slang|informal|AAVE}} To [[sing]]
