--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -69,7 +69,7 @@ From {{inh|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 * Norwegian: {{t|no|frett}}
 * Occitan: {{t+|oc|fura}}
 * Persian: {{t+|fa|راسو|tr=râsu}}, {{t+check|fa|قاقم|tr=qâqom}} <!--ermine or stoat, not ferret? -->
-* Polish: {{t+|pl|fretka|f}}
+* Polish: {{t+|pl|fretka|f}}, {{t+|pl|tchórz|m}}
 * Portuguese: {{t+|pt|furão|m}}
 * Quechua: {{t|qu|manqu}}
 * Romanian: {{t+|ro|nevăstuică|f}}
