--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} 
 * Latvian: {{t|lv|ķīla}}
 * Occitan: {{t|oc|empenhar}}
 * Polish: {{t|pl|złożyć zastaw}}
+* Portuguese: {{t|pt|caucionar}}
 * Russian: {{t|ru|[[отдава́ть]] в [[зало́г]]|impf}}, {{t|ru|[[отда́ть]] в [[зало́г]]|pf}}, {{t+|ru|закла́дывать|impf}}, {{t+|ru|заложи́ть|pf}}
 * Slovene: {{t|sl|zastaviti}}
 * Spanish: {{t+|es|hipotecar}}, {{t+|es|empeñar}}, {{t+|es|pignorar}}
