--- a/en/i/indorse.742110.wikitext
+++ b/en/i/indorse.742110.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Alteration influenced by {{etyl|ML.|en}} {{m|la|indorso|indorsare}} of {{etyl|enm|en}} {{m|enm|endosse}}, from {{etyl|fro|en}} {{m|fro|endosser||to put on back}}, from {{etyl|la|en}} {{m|la|dossum}}, alternative form of {{m|la|dorsum||back}},<ref>{{R:Online Etymology Dictionary}}</ref> from which also {{m|en|dorsal||of the back}}. That is, the ‘r’ was dropped in Latin ''dossum,'' which developed into Old French and then Middle English ''endosse,'' and then the ‘r’ was re-introduced into English via the Medieval Latin ''indorsare,'' which had retained the ‘r’; at the same time the ‘e’ (French) was changed to ‘i’ (Latin) ({{m|en|in-}}, rather than {{m|en|en-}}). Note that the alternative form {{m|en|endorse}} is now more common, retaining the restored ‘r’ but reverting to the initial ‘e’, rather than the Latinate ‘i’.
+Alteration influenced by {{der|en|ML.|indorso|indorsare}} of {{inh|en|enm|endosse}}, from {{der|en|fro|endosser||to put on back}}, from {{der|en|la|dossum}}, alternative form of {{m|la|dorsum||back}},<ref>{{R:Online Etymology Dictionary}}</ref> from which also {{m|en|dorsal||of the back}}. That is, the ‘r’ was dropped in Latin ''dossum,'' which developed into Old French and then Middle English ''endosse,'' and then the ‘r’ was re-introduced into English via the Medieval Latin ''indorsare,'' which had retained the ‘r’; at the same time the ‘e’ (French) was changed to ‘i’ (Latin) ({{m|en|in-}}, rather than {{m|en|en-}}). Note that the alternative form {{m|en|endorse}} is now more common, retaining the restored ‘r’ but reverting to the initial ‘e’, rather than the Latinate ‘i’.
 
 ===Verb===
 {{en-verb|indors}}
