--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -5,7 +5,8 @@
 From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|en|/kənˈsjuːm/}}
+* {{a|RP|UK|Australia}} {{IPA|en|/kənˈsjuːm/}}
+* {{a|UK|Australia}} {{IPA|en|/kənˈʃuːm/}}
 * {{a|US}} {{enPR|kən-so͞om}}, {{IPA|en|/kənˈsuːm/}}
 * {{audio|en|en-us-consume.ogg|Audio (US)}}
 * {{audio|en|en-uk-consume.ogg|Audio (UK)}}
