--- a/en/m/macedoine.801833.wikitext
+++ b/en/m/macedoine.801833.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|fr|en}} {{m|fr|Macédoine||Macedonia}}. {{doublet|en|Macedonia}}.
+From {{bor|en|fr|Macédoine||Macedonia}}. {{doublet|en|Macedonia}}.
 
 ===Noun===
 {{en-noun}}
