--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -54,6 +54,7 @@ From {{prefix|en|anarcho|capitalism}}. Coined by {{w|Murray Rothbard}} in the mi
 * Swedish: {{t+|sv|anarkokapitalism}}
 * Tamil: {{t|ta|அரசழிவு முதலாளித்துவம்|sc=Taml}}
 * Turkish: {{t|tr|anarko-kapitalizm}}
+* Uzbek: {{t|uz|anarxo-kapitalizm}}
 {{trans-bottom}}
 
 ===See also===
